Add JDBC configuration with in-memory H2 DB, implement query execution, and configure AOP advices